--- a/app/src/main/res/layout/bottom_navigation_bar.xml
+++ b/app/src/main/res/layout/bottom_navigation_bar.xml
@@ -7,11 +7,11 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:menu="@menu/bottom_navigation_menu"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="42dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_container_view"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:menu="@menu/bottom_navigation_menu" />
 
 </merge>
