--- a/app/src/main/res/layout/fragment_add_exercise.xml
+++ b/app/src/main/res/layout/fragment_add_exercise.xml
@@ -15,6 +15,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
+            android:fontFamily="sans-serif-condensed"
             android:text="@string/add_new_exercise"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
