--- a/app/src/main/res/layout/fragment_exercise_list.xml
+++ b/app/src/main/res/layout/fragment_exercise_list.xml
@@ -11,6 +11,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:fontFamily="sans-serif-condensed"
         android:text="@string/your_exercises"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
@@ -26,6 +27,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/your_exercises_text_view" />
-
+        app:layout_constraintTop_toBottomOf="@+id/your_exercises_text_view"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
