--- a/app/src/main/res/layout/fragment_photos.xml
+++ b/app/src/main/res/layout/fragment_photos.xml
@@ -13,6 +13,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-condensed"
+
             android:layout_centerHorizontal="true"
             android:text="@string/your_photos"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
