--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    app:cardCornerRadius="5dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="2dp"
     app:strokeWidth="1dp"
-    app:strokeColor="@color/whitesmoke"
-    android:padding="2dp">
+    app:strokeColor="@color/whitesmoke">
 
     <RelativeLayout
         android:layout_width="match_parent"
