--- a/app/src/main/res/layout/row_item_exercise.xml
+++ b/app/src/main/res/layout/row_item_exercise.xml
@@ -13,9 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_margin="8dp"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="6dp"
-        app:strokeWidth="1dp">
+        app:cardCornerRadius="25dp"
+        app:cardElevation="2dp"
+        app:strokeWidth="1dp"
+        app:strokeColor="@color/whitesmoke">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -27,6 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:fontFamily="sans-serif-condensed"
                 android:textAlignment="viewStart"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@color/black"
