--- a/app/src/main/res/layout/row_item_home.xml
+++ b/app/src/main/res/layout/row_item_home.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp">
 
@@ -11,19 +11,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:cardElevation="6dp"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="2dp"
         app:strokeWidth="1dp"
+        app:strokeColor="@color/whitesmoke"
         android:layout_gravity="start">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/home_item_text_view"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/whitesmoke"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/black"
-            tools:text="Allenamento" />
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/home_item_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:lineSpacingExtra="4dp"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="Titolo allenamento" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/home_item_data"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/home_item_title"
+                android:layout_centerHorizontal="true"
+                android:textColor="#000000"
+                android:typeface="sans"
+                tools:text="Data Allenamento" />
+
+        </RelativeLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
